RESOLVED FIXED33550
REGRESSION: -webkit-svg-shadow with opacity still over-clipped
https://bugs.webkit.org/show_bug.cgi?id=33550
Summary REGRESSION: -webkit-svg-shadow with opacity still over-clipped
Beth Dakin
Reported 2010-01-12 13:38:04 PST
See test case.
Attachments
Test case (172 bytes, image/svg+xml)
2010-01-12 13:49 PST, Beth Dakin
no flags
Patch (4.70 KB, patch)
2010-01-12 15:04 PST, Beth Dakin
sam: review+
Beth Dakin
Comment 1 2010-01-12 13:49:49 PST
Created attachment 46398 [details] Test case
Beth Dakin
Comment 2 2010-01-12 14:07:36 PST
I have a patch for this. Just running the tests right now.
Beth Dakin
Comment 3 2010-01-12 15:04:12 PST
Beth Dakin
Comment 4 2010-01-12 15:10:47 PST
Thanks Sam! Fixed with r53166.
Note You need to log in before you can comment on or make changes to this bug.