WebCore: Fix for https://bugs.webkit.org/show_bug.cgi?id=33550 REGRESSION: - webkit-svg-shadow with opacity still over-clipped

Reviewed by Sam Weinig.

We need to call inflateForShadow() on the repaintRect before we
clip for opacity or we will over-clip.
* rendering/SVGRenderSupport.cpp:
(WebCore::SVGRenderBase::prepareToRenderSVGContent):

LayoutTests: Test for https://bugs.webkit.org/show_bug.cgi?id=33550 REGRESSION:
-webkit-svg-shadow with opacity still over-clipped

Reviewed by Sam Weinig.

* platform/mac/svg/css/shadow-and-opacity-expected.checksum: Added.
* platform/mac/svg/css/shadow-and-opacity-expected.png: Added.
* platform/mac/svg/css/shadow-and-opacity-expected.txt: Added.
* svg/css/shadow-and-opacity.svg: Added.



Canonical link: https://commits.webkit.org/44574@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@53166 268f45cc-cd09-0410-ab3c-d52691b4dbfc